# terrain_ridges

./: .gitignore  LICENSE  README.md  boundary_info.py  contour_test.py  gdal_utils.py  github-trigger.bat  pyproject.toml  requirements.txt  ridges.py  visualize.py
.github/download-data/: action.yml
.github/download-usgs/: action.yml
.github/workflows/: generate-mwm.yml  generate-obf.yml  generate-ridges.yml  main.yml
docs/: sandbox.ipynb
ref_results/: N39E021-mod.tif.kml  N39E021.hgt.kml
terrain_ridges/: __init__.py  build_edges.py  build_full_graph.py  gdal_utils.py  node_address.py  ridges.py  test-cytoscape.py  topo_graph.py  visualize.py
test/: __init__.py  conftest.py  test_basic.py  test_benchmark.py  test_build_edges.py  test_build_full_graph.py  test_legacy.py  test_main.py  test_node_address.py  test_topo_graph.py  test_visualize-cytoscape.py  test_visualize.py
test/DEM/: Etna-tiny.tif-node_addr.npy  Etna.tif-node_addr.npy  N39E021-crop-25_25_10_13.tif-node_addr.npy  Santorini-small.tif-node_addr.npy  Santorini-tiny.tif-node_addr.npy  Vitosha-small.tif-node_addr.npy  Vitosha.tif-node_addr.npy
tools/: legacy_integration.py  test-cytoscape.py  topo_graph.py  visualize.py  visualize_dash-server.py  visualize_dash.py  visualize_plotly.py
tools/mwm_generator/: make_mwm.sh  ogr2osm_translation-hack.py  ogr2osm_translation.py  requirements.txt
tools/mwm_generator/omim_patch/: 0001-Experiments-to-isolate-generator_tool-crashes.patch  (+3 more)
tools/obf_generator/: batch.xml  make_obf.bat  ogr2osm_translation.py
